--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -1,4 +1,4 @@
-<ul class="list-inline text-center avatar">
+<ul class="list-inline text-center">
   <% ["abel", "andrea", "domitille", "fred", "paul"].each do |member| %>
     <li>
       <%= image_tag "#{member}.png", class: "img-circle" %>
