--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -1,7 +1,7 @@
-<ul class="list-inline text-center avatar">
+<ul class="list-inline text-center">
   <% ["abel", "andrea", "domitille", "fred", "paul"].each do |member| %>
     <li>
-      <%= image_tag "#{member}.png", class: "img-circle" %>
+      <%= image_tag "#{member}.png", class: " avatar img-circle" %>
       <h3><%= member.capitalize %></h3>
     </li>
   <% end %>
