--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,7 @@
 title: Le Wagon Middleman boilerplate
 ---
 
-<div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('images/background.jpg');">
+<div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%=image_path("backgroung.jpg") %>);">
       <div class="banner-content">
         <h1>WELCOME HOME</h1>
         <p>Rent unique places to stay from local hosts in 190+ countries.</p>
@@ -13,22 +13,22 @@ title: Le Wagon Middleman boilerplate
     <div class="container text-center padded features">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <img src="images/globe.png" alt="">
+          <%= image_tag "globe.png" %>
           <h2>Discover the world</h2>
           <p>The earth is your new home.</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <img src="images/dollar.png" alt="">
+          <%= image_tag "dollar.png" %>
           <h2>Pay online</h2>
           <p>No cash issues anymore.</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <img src="images/beer.png" alt="">
+          <%= image_tag "beer.png" %>
           <h2>Meet people</h2>
           <p>Discover new culture and lifestyle.</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <img src="images/heart.png" alt="">
+          <%= image_tag "heart.png" %>
           <h2>Share and love</h2>
           <p>Join a community you will love.</p>
         </div>
@@ -40,7 +40,7 @@ title: Le Wagon Middleman boilerplate
         <h2 class="text-center">Your next trip</h2>
         <div class="row">
           <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-paris.jpg');">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%=image_path("card-paris.jpg") %>);">
               <div class="card-category">Paris</div>
               <div class="card-description">
                 <h2>Seb's home</h2>
@@ -51,7 +51,7 @@ title: Le Wagon Middleman boilerplate
             </div>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-brussels.jpeg');">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%=image_path("card-brussels.jpeg") %>);">
               <div class="card-category">Brussels</div>
               <div class="card-description">
                 <h2>Anne's home</h2>
@@ -62,7 +62,7 @@ title: Le Wagon Middleman boilerplate
             </div>
           </div>
           <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-london.jpeg');">
+            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%=image_path("card-london.jpeg") %>');">
               <div class="card-category">London</div>
               <div class="card-description">
                 <h2>Romain's home</h2>
