--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -1,8 +1,17 @@
-<ul class="list-inline text-center padded">
-  <% ["abel", "andrea", "domitille", "fred", "paul"].each do |member| %>
-    <li>
-      <%= image_tag "#{member}.png", class: " avatar-large img-circle" %>
-      <h3><%= member.capitalize %></h3>
-    </li>
-  <% end %>
-</ul>
+<div id="team">
+  <h2 class="text-center"> Our Team</h2>
+  <ul class="list-inline text-center padded">
+    <% ["abel", "andrea", "domitille", "fred", "paul"].each do |member| %>
+      <li>
+        <h3><%= member.capitalize %></h3>
+        <%= image_tag "#{member}.png", class: " avatar-large img-circle" %>
+      </li>
+    <% end %>
+  <h3 class="padded">
+    <a href="mailto:contact@airbnb.com">
+      <i class="fa fa-envelope"></i>
+       contact@airbnb.com
+    </a>
+  </h3>
+  </ul>
+</div>
