finished home and team page

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,7 +15,7 @@
 
     <%= stylesheet_link_tag "all" %>
     <%= javascript_include_tag  "all" %>
-    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyAubjCIu4j2Gcp985SjTPYl_qCvrwVAxH0&libraries=places"%>```
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyAubjCIu4j2Gcp985SjTPYl_qCvrwVAxH0&libraries=places"%>
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
