--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -86,8 +86,8 @@ title: Le Wagon Middleman boilerplate
     </div>
 
     <div id="map" style="width: 100%;height: 500px;"></div>
-
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+<!--
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script> -->
 
     <script type="text/javascript">
     var myLatlng = new google.maps.LatLng(48.852937,2.364178);
