--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -1,4 +1,5 @@
 .banner {
+  font-family: $banner-font;
   color: white;
   text-align: center;
   height: 100vh;
@@ -7,8 +8,10 @@
   align-items: center;
   justify-content: center;
   h1 {
+
+    font-family: $banner-font;
     font-size: 50px;
-    font-weight: bold;
+    // font-weight: bold;
     text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
   }
   p {
