--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -2,9 +2,10 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,700|Raleway:400,100,300,700,500|Pacifico");
 $base-font: "Open Sans", "Helvetica", "sans-serif";
 $header-font: "Raleway", "Helvetica", "sans-serif";
+$banner-font: "Pacifico";
 
 // Local fonts (uncomment following lines)
 // @font-face {
@@ -31,6 +32,7 @@ $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
+$pink: #FF4FE2;
 
 // Gray scale
 $gray-darker:  lighten(#000, 13.5%); // #222
